Added manifest to ImarisSelector :: Admin to allow setting of the requested execution level.

--- a/ImarisSelectorAdmin/ImarisSelectorAdmin.csproj
+++ b/ImarisSelectorAdmin/ImarisSelectorAdmin.csproj
@@ -56,7 +56,7 @@
     <ManifestKeyFile>ImarisSelectorAdmin_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>false</SignManifests>
@@ -85,6 +85,12 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>ImarisSelectorAdminIcon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -119,6 +125,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
