--- a/ImarisSelectorLib/ImarisSelectorLib.csproj
+++ b/ImarisSelectorLib/ImarisSelectorLib.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationManager.cs" />
     <Compile Include="SettingsManager.cs" />
     <Compile Include="ModuleManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
